--- a/client/style.css
+++ b/client/style.css
@@ -11,10 +11,14 @@ img {
 }
 
 #menu {
-    height: 10vh;
+    width: 100%;
+    height: 10ch;
     display: flex;
     justify-content: space-evenly;
+    box-shadow: 0px 4px 6px -6px black;
+    padding: auto;
 }
+
 
 #menuBtn {
     background-color: #37a29b;
