--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ img {
     width: 100%;
     height: 10ch;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: left;
     padding: auto;
 }
 
