--- a/client/style.css
+++ b/client/style.css
@@ -22,6 +22,18 @@ img {
 padding: 10px;
 }
 
+#menu a {
+border: 1px solid #37a29b;
+border-radius: 5px;
+margin: 20px;
+padding: 1%;
+}
+
+#menu a {
+color: white;
+border: 1px solid white;
+}
+
 
 #menuBtn {
     background-color: #37a29b;
@@ -55,4 +67,8 @@ padding: 10px;
 
 #content {
     display: inline-block;
+}
+
+#content img {
+ width: fit-content;   
 }
